2005-08-29  Michael Natterer  <mitch@gimp.org>

	The previous commit added tons of code just to completely break
	clone align behavior. Reverted lots of the changes and do the
	sample-merged stuff at the innermost place (gimp_clone_motion).
	This change also enables changing sample-merged between paint
	strokes.

	* app/paint/gimpclone.[ch] (struct GimpClone): changed member
	"src_pickable" back to "src_drawable".

	(gimp_clone_paint): completely reverted.

	(gimp_clone_motion): do the drawable/projection -> pickable
	stuff and drawable offset handling here.

	Fixed signal handling to connect to the drawable's "removed"
	signal (not "disconnect", eek). Disconnect from the signal once
	the drawable has been removed.

	* app/tools/gimpclonetool.c: changed accordingly.

2005-08-29  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/gif.c: added toggles which allow to always use
	the frame delay and disposal entered in the dialog, overriding the
	ones specified in the layer names. Fixes bug #314726. Also fixed
	missing and non-working mnemonics.

2005-08-29  Karine Delvare  <kdelvare@nerim.net>

	* app/tools/gimprectangletool.c: fix canceling the tool.

2005-08-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/poppler.c: retitled dialog to "Import from PDF"
	and changed the confirmative button label to "Import".

2005-08-28  Michael Natterer  <mitch@gimp.org>

	Implement "Sample Merged" for the clone tool. Fixes bug #123627.

	* app/paint/gimppaintcore.[ch] (struct GimpPaintCore): added
	members "saved_proj_tiles" which stores the unmodified projection,
	"orig_proj_buf" which stores the unmodified temp paint application
	buf and "use_saved_proj" which controls if all the additional
	stuff should be allocated and managed.

	(gimp_paint_core_start): allocate the saved_proj_tiles if needed.

	(gimp_paint_core_get_orig_proj): new function like
	gimp_paint_core_get_orig_image() which returns unmodified
	projection pixels for paint application.
